// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PackageForm Snapshot Tests matches snapshot in create mode with empty form 1`] = `
<div>
  <form
    class="space-y-6 max-w-2xl"
  >
    <div
      class="space-y-4"
    >
      <h3
        class="text-lg font-semibold"
      >
        Basic Information
      </h3>
      <div>
        <label
          class="block mb-1 font-medium text-sm"
        >
          Name
        </label>
        <input
          class="w-full px-3 py-2 border border-gray-300 rounded-md"
          required=""
          type="text"
          value=""
        />
      </div>
      <div>
        <label
          class="block mb-1 font-medium text-sm"
        >
          Slug
        </label>
        <div
          class="flex gap-2"
        >
          <input
            class="w-full px-3 py-2 border border-gray-300 rounded-md"
            pattern="[a-z0-9-]+"
            required=""
            type="text"
            value=""
          />
          <button
            class="px-3 py-2 text-sm border border-gray-300 rounded-md hover:bg-gray-50"
            type="button"
          >
            Auto
          </button>
        </div>
      </div>
      <div>
        <label
          class="block mb-1 font-medium text-sm"
        >
          Tagline
        </label>
        <input
          class="w-full px-3 py-2 border border-gray-300 rounded-md"
          placeholder="Short description"
          type="text"
          value=""
        />
      </div>
      <div>
        <label
          class="block mb-1 font-medium text-sm"
        >
          Description
        </label>
        <textarea
          class="w-full px-3 py-2 border border-gray-300 rounded-md"
          rows="4"
        />
      </div>
      <div>
        <label
          class="block mb-1 font-medium text-sm"
        >
          Type
        </label>
        <select
          class="w-full px-3 py-2 border border-gray-300 rounded-md"
        >
          <option
            value="LOCAL_AGENT"
          >
            Local Agent
          </option>
          <option
            value="CLOUD_APP"
          >
            Cloud App
          </option>
        </select>
      </div>
    </div>
    <div
      class="space-y-4"
    >
      <h3
        class="text-lg font-semibold"
      >
        Platform
      </h3>
      <div
        class="flex items-center gap-2"
      >
        <input
          class="rounded"
          id="requires_macos"
          type="checkbox"
        />
        <label
          class="text-sm"
          for="requires_macos"
        >
          Requires macOS
        </label>
      </div>
      <div>
        <label
          class="block mb-1 font-medium text-sm"
        >
          Minimum OS Version
        </label>
        <input
          class="w-full px-3 py-2 border border-gray-300 rounded-md"
          placeholder="e.g. 14.0"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="space-y-4"
    >
      <h3
        class="text-lg font-semibold"
      >
        URLs
      </h3>
      <div>
        <label
          class="block mb-1 font-medium text-sm"
        >
          Download URL
        </label>
        <input
          class="w-full px-3 py-2 border border-gray-300 rounded-md"
          type="url"
          value=""
        />
      </div>
      <div>
        <label
          class="block mb-1 font-medium text-sm"
        >
          Web App URL
        </label>
        <input
          class="w-full px-3 py-2 border border-gray-300 rounded-md"
          type="url"
          value=""
        />
      </div>
      <div>
        <label
          class="block mb-1 font-medium text-sm"
        >
          Documentation URL
        </label>
        <input
          class="w-full px-3 py-2 border border-gray-300 rounded-md"
          type="url"
          value=""
        />
      </div>
      <div>
        <label
          class="block mb-1 font-medium text-sm"
        >
          Support URL
        </label>
        <input
          class="w-full px-3 py-2 border border-gray-300 rounded-md"
          type="url"
          value=""
        />
      </div>
    </div>
    <div
      class="space-y-4"
    >
      <h3
        class="text-lg font-semibold"
      >
        Related Course
      </h3>
      <div>
        <label
          class="block mb-1 font-medium text-sm"
        >
          Link to Course
        </label>
        <select
          class="w-full px-3 py-2 border border-gray-300 rounded-md"
        >
          <option
            value=""
          >
            None
          </option>
        </select>
        <p
          class="text-xs text-gray-500 mt-1"
        >
          Linking a course shows it on the package page and vice versa.
        </p>
      </div>
    </div>
    <div
      class="space-y-4"
    >
      <h3
        class="text-lg font-semibold"
      >
        Pricing
      </h3>
      <div>
        <label
          class="block mb-1 font-medium text-sm"
        >
          Price (cents)
        </label>
        <input
          class="w-full px-3 py-2 border border-gray-300 rounded-md"
          min="0"
          placeholder="e.g. 4900 for $49"
          type="number"
          value=""
        />
      </div>
    </div>
    <div
      class="space-y-4"
    >
      <h3
        class="text-lg font-semibold"
      >
        Status
      </h3>
      <div>
        <label
          class="block mb-1 font-medium text-sm"
        >
          Status
        </label>
        <select
          class="w-full px-3 py-2 border border-gray-300 rounded-md"
        >
          <option
            value="operational"
          >
            Operational
          </option>
          <option
            value="degraded"
          >
            Degraded
          </option>
          <option
            value="down"
          >
            Down
          </option>
          <option
            value="maintenance"
          >
            Maintenance
          </option>
        </select>
      </div>
      <div>
        <label
          class="block mb-1 font-medium text-sm"
        >
          Status Message
        </label>
        <input
          class="w-full px-3 py-2 border border-gray-300 rounded-md"
          type="text"
          value=""
        />
      </div>
      <div>
        <label
          class="block mb-1 font-medium text-sm"
        >
          Status Check URL
        </label>
        <input
          class="w-full px-3 py-2 border border-gray-300 rounded-md"
          type="url"
          value=""
        />
      </div>
    </div>
    <div
      class="space-y-4"
    >
      <h3
        class="text-lg font-semibold"
      >
        Media
      </h3>
      <div>
        <label
          class="block mb-1 font-medium text-sm"
        >
          Icon URL
        </label>
        <input
          class="w-full px-3 py-2 border border-gray-300 rounded-md"
          type="url"
          value=""
        />
      </div>
      <div>
        <label
          class="block mb-1 font-medium text-sm"
        >
          Banner URL
        </label>
        <input
          class="w-full px-3 py-2 border border-gray-300 rounded-md"
          type="url"
          value=""
        />
      </div>
    </div>
    <div
      class="space-y-4"
    >
      <h3
        class="text-lg font-semibold"
      >
        Features
      </h3>
      <div
        class="flex gap-2"
      >
        <input
          class="flex-1 px-3 py-2 border border-gray-300 rounded-md"
          placeholder="Add a feature..."
          type="text"
          value=""
        />
        <button
          class="px-3 py-2 text-sm border border-gray-300 rounded-md hover:bg-gray-50"
          type="button"
        >
          Add
        </button>
      </div>
    </div>
    <div
      class="space-y-4"
    >
      <h3
        class="text-lg font-semibold"
      >
        Requirements (JSON)
      </h3>
      <textarea
        class="w-full px-3 py-2 border border-gray-300 rounded-md font-mono text-sm"
        rows="4"
      >
        {}
      </textarea>
    </div>
    <div
      class="space-y-4"
    >
      <h3
        class="text-lg font-semibold"
      >
        Publishing
      </h3>
      <div
        class="flex items-center gap-4"
      >
        <div
          class="flex items-center gap-2"
        >
          <input
            class="rounded"
            id="is_published"
            type="checkbox"
          />
          <label
            class="text-sm"
            for="is_published"
          >
            Published
          </label>
        </div>
        <div
          class="flex items-center gap-2"
        >
          <input
            class="rounded"
            id="is_featured"
            type="checkbox"
          />
          <label
            class="text-sm"
            for="is_featured"
          >
            Featured
          </label>
        </div>
      </div>
      <div>
        <label
          class="block mb-1 font-medium text-sm"
        >
          Sort Order
        </label>
        <input
          class="w-full px-3 py-2 border border-gray-300 rounded-md"
          min="0"
          type="number"
          value="0"
        />
      </div>
    </div>
    <div
      class="flex gap-3 pt-4 border-t"
    >
      <button
        class="bg-black text-white px-5 py-2 rounded-md hover:bg-gray-800 disabled:opacity-50 disabled:cursor-not-allowed"
        type="submit"
      >
        Create Package
      </button>
      <button
        class="px-5 py-2 border border-gray-300 rounded-md hover:bg-gray-50"
        type="button"
      >
        Cancel
      </button>
    </div>
  </form>
</div>
`;

exports[`PackageForm Snapshot Tests matches snapshot in edit mode with existing package data 1`] = `
<div>
  <form
    class="space-y-6 max-w-2xl"
  >
    <div
      class="space-y-4"
    >
      <h3
        class="text-lg font-semibold"
      >
        Basic Information
      </h3>
      <div>
        <label
          class="block mb-1 font-medium text-sm"
        >
          Name
        </label>
        <input
          class="w-full px-3 py-2 border border-gray-300 rounded-md"
          required=""
          type="text"
          value="Test Package"
        />
      </div>
      <div>
        <label
          class="block mb-1 font-medium text-sm"
        >
          Slug
        </label>
        <div
          class="flex gap-2"
        >
          <input
            class="w-full px-3 py-2 border border-gray-300 rounded-md"
            pattern="[a-z0-9-]+"
            readonly=""
            required=""
            type="text"
            value="test-package"
          />
        </div>
      </div>
      <div>
        <label
          class="block mb-1 font-medium text-sm"
        >
          Tagline
        </label>
        <input
          class="w-full px-3 py-2 border border-gray-300 rounded-md"
          placeholder="Short description"
          type="text"
          value="A test package"
        />
      </div>
      <div>
        <label
          class="block mb-1 font-medium text-sm"
        >
          Description
        </label>
        <textarea
          class="w-full px-3 py-2 border border-gray-300 rounded-md"
          rows="4"
        >
          This is a test package for snapshot testing
        </textarea>
      </div>
      <div>
        <label
          class="block mb-1 font-medium text-sm"
        >
          Type
        </label>
        <select
          class="w-full px-3 py-2 border border-gray-300 rounded-md"
        >
          <option
            value="LOCAL_AGENT"
          >
            Local Agent
          </option>
          <option
            value="CLOUD_APP"
          >
            Cloud App
          </option>
        </select>
      </div>
    </div>
    <div
      class="space-y-4"
    >
      <h3
        class="text-lg font-semibold"
      >
        Platform
      </h3>
      <div
        class="flex items-center gap-2"
      >
        <input
          checked=""
          class="rounded"
          id="requires_macos"
          type="checkbox"
        />
        <label
          class="text-sm"
          for="requires_macos"
        >
          Requires macOS
        </label>
      </div>
      <div>
        <label
          class="block mb-1 font-medium text-sm"
        >
          Minimum OS Version
        </label>
        <input
          class="w-full px-3 py-2 border border-gray-300 rounded-md"
          placeholder="e.g. 14.0"
          type="text"
          value="13.0"
        />
      </div>
    </div>
    <div
      class="space-y-4"
    >
      <h3
        class="text-lg font-semibold"
      >
        URLs
      </h3>
      <div>
        <label
          class="block mb-1 font-medium text-sm"
        >
          Download URL
        </label>
        <input
          class="w-full px-3 py-2 border border-gray-300 rounded-md"
          type="url"
          value="https://example.com/download"
        />
      </div>
      <div>
        <label
          class="block mb-1 font-medium text-sm"
        >
          Web App URL
        </label>
        <input
          class="w-full px-3 py-2 border border-gray-300 rounded-md"
          type="url"
          value=""
        />
      </div>
      <div>
        <label
          class="block mb-1 font-medium text-sm"
        >
          Documentation URL
        </label>
        <input
          class="w-full px-3 py-2 border border-gray-300 rounded-md"
          type="url"
          value="https://docs.example.com"
        />
      </div>
      <div>
        <label
          class="block mb-1 font-medium text-sm"
        >
          Support URL
        </label>
        <input
          class="w-full px-3 py-2 border border-gray-300 rounded-md"
          type="url"
          value="https://support.example.com"
        />
      </div>
    </div>
    <div
      class="space-y-4"
    >
      <h3
        class="text-lg font-semibold"
      >
        Related Course
      </h3>
      <div>
        <label
          class="block mb-1 font-medium text-sm"
        >
          Link to Course
        </label>
        <select
          class="w-full px-3 py-2 border border-gray-300 rounded-md"
        >
          <option
            value=""
          >
            None
          </option>
        </select>
        <p
          class="text-xs text-gray-500 mt-1"
        >
          Linking a course shows it on the package page and vice versa.
        </p>
      </div>
    </div>
    <div
      class="space-y-4"
    >
      <h3
        class="text-lg font-semibold"
      >
        Pricing
      </h3>
      <div>
        <label
          class="block mb-1 font-medium text-sm"
        >
          Price (cents)
        </label>
        <input
          class="w-full px-3 py-2 border border-gray-300 rounded-md"
          min="0"
          placeholder="e.g. 4900 for $49"
          type="number"
          value="4900"
        />
      </div>
    </div>
    <div
      class="space-y-4"
    >
      <h3
        class="text-lg font-semibold"
      >
        Status
      </h3>
      <div>
        <label
          class="block mb-1 font-medium text-sm"
        >
          Status
        </label>
        <select
          class="w-full px-3 py-2 border border-gray-300 rounded-md"
        >
          <option
            value="operational"
          >
            Operational
          </option>
          <option
            value="degraded"
          >
            Degraded
          </option>
          <option
            value="down"
          >
            Down
          </option>
          <option
            value="maintenance"
          >
            Maintenance
          </option>
        </select>
      </div>
      <div>
        <label
          class="block mb-1 font-medium text-sm"
        >
          Status Message
        </label>
        <input
          class="w-full px-3 py-2 border border-gray-300 rounded-md"
          type="text"
          value=""
        />
      </div>
      <div>
        <label
          class="block mb-1 font-medium text-sm"
        >
          Status Check URL
        </label>
        <input
          class="w-full px-3 py-2 border border-gray-300 rounded-md"
          type="url"
          value="https://example.com/health"
        />
      </div>
    </div>
    <div
      class="space-y-4"
    >
      <h3
        class="text-lg font-semibold"
      >
        Media
      </h3>
      <div>
        <label
          class="block mb-1 font-medium text-sm"
        >
          Icon URL
        </label>
        <input
          class="w-full px-3 py-2 border border-gray-300 rounded-md"
          type="url"
          value="/icons/test.png"
        />
        <img
          alt="Icon preview"
          class="mt-2 h-16 w-16 rounded-lg object-cover"
          src="/icons/test.png"
        />
      </div>
      <div>
        <label
          class="block mb-1 font-medium text-sm"
        >
          Banner URL
        </label>
        <input
          class="w-full px-3 py-2 border border-gray-300 rounded-md"
          type="url"
          value="/banners/test.jpg"
        />
      </div>
    </div>
    <div
      class="space-y-4"
    >
      <h3
        class="text-lg font-semibold"
      >
        Features
      </h3>
      <div
        class="flex gap-2"
      >
        <input
          class="flex-1 px-3 py-2 border border-gray-300 rounded-md"
          placeholder="Add a feature..."
          type="text"
          value=""
        />
        <button
          class="px-3 py-2 text-sm border border-gray-300 rounded-md hover:bg-gray-50"
          type="button"
        >
          Add
        </button>
      </div>
      <ul
        class="space-y-1"
      >
        <li
          class="flex items-center justify-between px-3 py-2 bg-gray-50 rounded-md text-sm"
        >
          <span>
            Feature 1
          </span>
          <button
            class="text-red-500 hover:text-red-700 text-xs"
            type="button"
          >
            Remove
          </button>
        </li>
        <li
          class="flex items-center justify-between px-3 py-2 bg-gray-50 rounded-md text-sm"
        >
          <span>
            Feature 2
          </span>
          <button
            class="text-red-500 hover:text-red-700 text-xs"
            type="button"
          >
            Remove
          </button>
        </li>
        <li
          class="flex items-center justify-between px-3 py-2 bg-gray-50 rounded-md text-sm"
        >
          <span>
            Feature 3
          </span>
          <button
            class="text-red-500 hover:text-red-700 text-xs"
            type="button"
          >
            Remove
          </button>
        </li>
      </ul>
    </div>
    <div
      class="space-y-4"
    >
      <h3
        class="text-lg font-semibold"
      >
        Requirements (JSON)
      </h3>
      <textarea
        class="w-full px-3 py-2 border border-gray-300 rounded-md font-mono text-sm"
        rows="4"
      >
        {
  "ram": "8GB",
  "storage": "2GB"
}
      </textarea>
    </div>
    <div
      class="space-y-4"
    >
      <h3
        class="text-lg font-semibold"
      >
        Publishing
      </h3>
      <div
        class="flex items-center gap-4"
      >
        <div
          class="flex items-center gap-2"
        >
          <input
            checked=""
            class="rounded"
            id="is_published"
            type="checkbox"
          />
          <label
            class="text-sm"
            for="is_published"
          >
            Published
          </label>
        </div>
        <div
          class="flex items-center gap-2"
        >
          <input
            class="rounded"
            id="is_featured"
            type="checkbox"
          />
          <label
            class="text-sm"
            for="is_featured"
          >
            Featured
          </label>
        </div>
      </div>
      <div>
        <label
          class="block mb-1 font-medium text-sm"
        >
          Sort Order
        </label>
        <input
          class="w-full px-3 py-2 border border-gray-300 rounded-md"
          min="0"
          type="number"
          value="1"
        />
      </div>
    </div>
    <div
      class="flex gap-3 pt-4 border-t"
    >
      <button
        class="bg-black text-white px-5 py-2 rounded-md hover:bg-gray-800 disabled:opacity-50 disabled:cursor-not-allowed"
        type="submit"
      >
        Save Changes
      </button>
      <button
        class="bg-red-600 text-white px-5 py-2 rounded-md hover:bg-red-700 disabled:opacity-50 disabled:cursor-not-allowed"
        type="button"
      >
        Unpublish
      </button>
      <button
        class="px-5 py-2 border border-gray-300 rounded-md hover:bg-gray-50"
        type="button"
      >
        Cancel
      </button>
    </div>
  </form>
</div>
`;

exports[`PackageForm Snapshot Tests matches snapshot in edit mode with minimal package data 1`] = `
<div>
  <form
    class="space-y-6 max-w-2xl"
  >
    <div
      class="space-y-4"
    >
      <h3
        class="text-lg font-semibold"
      >
        Basic Information
      </h3>
      <div>
        <label
          class="block mb-1 font-medium text-sm"
        >
          Name
        </label>
        <input
          class="w-full px-3 py-2 border border-gray-300 rounded-md"
          required=""
          type="text"
          value="Minimal Package"
        />
      </div>
      <div>
        <label
          class="block mb-1 font-medium text-sm"
        >
          Slug
        </label>
        <div
          class="flex gap-2"
        >
          <input
            class="w-full px-3 py-2 border border-gray-300 rounded-md"
            pattern="[a-z0-9-]+"
            readonly=""
            required=""
            type="text"
            value="minimal-package"
          />
        </div>
      </div>
      <div>
        <label
          class="block mb-1 font-medium text-sm"
        >
          Tagline
        </label>
        <input
          class="w-full px-3 py-2 border border-gray-300 rounded-md"
          placeholder="Short description"
          type="text"
          value=""
        />
      </div>
      <div>
        <label
          class="block mb-1 font-medium text-sm"
        >
          Description
        </label>
        <textarea
          class="w-full px-3 py-2 border border-gray-300 rounded-md"
          rows="4"
        >
          Minimal package
        </textarea>
      </div>
      <div>
        <label
          class="block mb-1 font-medium text-sm"
        >
          Type
        </label>
        <select
          class="w-full px-3 py-2 border border-gray-300 rounded-md"
        >
          <option
            value="LOCAL_AGENT"
          >
            Local Agent
          </option>
          <option
            value="CLOUD_APP"
          >
            Cloud App
          </option>
        </select>
      </div>
    </div>
    <div
      class="space-y-4"
    >
      <h3
        class="text-lg font-semibold"
      >
        Platform
      </h3>
      <div
        class="flex items-center gap-2"
      >
        <input
          class="rounded"
          id="requires_macos"
          type="checkbox"
        />
        <label
          class="text-sm"
          for="requires_macos"
        >
          Requires macOS
        </label>
      </div>
      <div>
        <label
          class="block mb-1 font-medium text-sm"
        >
          Minimum OS Version
        </label>
        <input
          class="w-full px-3 py-2 border border-gray-300 rounded-md"
          placeholder="e.g. 14.0"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="space-y-4"
    >
      <h3
        class="text-lg font-semibold"
      >
        URLs
      </h3>
      <div>
        <label
          class="block mb-1 font-medium text-sm"
        >
          Download URL
        </label>
        <input
          class="w-full px-3 py-2 border border-gray-300 rounded-md"
          type="url"
          value=""
        />
      </div>
      <div>
        <label
          class="block mb-1 font-medium text-sm"
        >
          Web App URL
        </label>
        <input
          class="w-full px-3 py-2 border border-gray-300 rounded-md"
          type="url"
          value="https://app.example.com"
        />
      </div>
      <div>
        <label
          class="block mb-1 font-medium text-sm"
        >
          Documentation URL
        </label>
        <input
          class="w-full px-3 py-2 border border-gray-300 rounded-md"
          type="url"
          value=""
        />
      </div>
      <div>
        <label
          class="block mb-1 font-medium text-sm"
        >
          Support URL
        </label>
        <input
          class="w-full px-3 py-2 border border-gray-300 rounded-md"
          type="url"
          value=""
        />
      </div>
    </div>
    <div
      class="space-y-4"
    >
      <h3
        class="text-lg font-semibold"
      >
        Related Course
      </h3>
      <div>
        <label
          class="block mb-1 font-medium text-sm"
        >
          Link to Course
        </label>
        <select
          class="w-full px-3 py-2 border border-gray-300 rounded-md"
        >
          <option
            value=""
          >
            None
          </option>
        </select>
        <p
          class="text-xs text-gray-500 mt-1"
        >
          Linking a course shows it on the package page and vice versa.
        </p>
      </div>
    </div>
    <div
      class="space-y-4"
    >
      <h3
        class="text-lg font-semibold"
      >
        Pricing
      </h3>
      <div>
        <label
          class="block mb-1 font-medium text-sm"
        >
          Price (cents)
        </label>
        <input
          class="w-full px-3 py-2 border border-gray-300 rounded-md"
          min="0"
          placeholder="e.g. 4900 for $49"
          type="number"
          value=""
        />
      </div>
    </div>
    <div
      class="space-y-4"
    >
      <h3
        class="text-lg font-semibold"
      >
        Status
      </h3>
      <div>
        <label
          class="block mb-1 font-medium text-sm"
        >
          Status
        </label>
        <select
          class="w-full px-3 py-2 border border-gray-300 rounded-md"
        >
          <option
            value="operational"
          >
            Operational
          </option>
          <option
            value="degraded"
          >
            Degraded
          </option>
          <option
            value="down"
          >
            Down
          </option>
          <option
            value="maintenance"
          >
            Maintenance
          </option>
        </select>
      </div>
      <div>
        <label
          class="block mb-1 font-medium text-sm"
        >
          Status Message
        </label>
        <input
          class="w-full px-3 py-2 border border-gray-300 rounded-md"
          type="text"
          value=""
        />
      </div>
      <div>
        <label
          class="block mb-1 font-medium text-sm"
        >
          Status Check URL
        </label>
        <input
          class="w-full px-3 py-2 border border-gray-300 rounded-md"
          type="url"
          value=""
        />
      </div>
    </div>
    <div
      class="space-y-4"
    >
      <h3
        class="text-lg font-semibold"
      >
        Media
      </h3>
      <div>
        <label
          class="block mb-1 font-medium text-sm"
        >
          Icon URL
        </label>
        <input
          class="w-full px-3 py-2 border border-gray-300 rounded-md"
          type="url"
          value=""
        />
      </div>
      <div>
        <label
          class="block mb-1 font-medium text-sm"
        >
          Banner URL
        </label>
        <input
          class="w-full px-3 py-2 border border-gray-300 rounded-md"
          type="url"
          value=""
        />
      </div>
    </div>
    <div
      class="space-y-4"
    >
      <h3
        class="text-lg font-semibold"
      >
        Features
      </h3>
      <div
        class="flex gap-2"
      >
        <input
          class="flex-1 px-3 py-2 border border-gray-300 rounded-md"
          placeholder="Add a feature..."
          type="text"
          value=""
        />
        <button
          class="px-3 py-2 text-sm border border-gray-300 rounded-md hover:bg-gray-50"
          type="button"
        >
          Add
        </button>
      </div>
    </div>
    <div
      class="space-y-4"
    >
      <h3
        class="text-lg font-semibold"
      >
        Requirements (JSON)
      </h3>
      <textarea
        class="w-full px-3 py-2 border border-gray-300 rounded-md font-mono text-sm"
        rows="4"
      >
        {}
      </textarea>
    </div>
    <div
      class="space-y-4"
    >
      <h3
        class="text-lg font-semibold"
      >
        Publishing
      </h3>
      <div
        class="flex items-center gap-4"
      >
        <div
          class="flex items-center gap-2"
        >
          <input
            class="rounded"
            id="is_published"
            type="checkbox"
          />
          <label
            class="text-sm"
            for="is_published"
          >
            Published
          </label>
        </div>
        <div
          class="flex items-center gap-2"
        >
          <input
            class="rounded"
            id="is_featured"
            type="checkbox"
          />
          <label
            class="text-sm"
            for="is_featured"
          >
            Featured
          </label>
        </div>
      </div>
      <div>
        <label
          class="block mb-1 font-medium text-sm"
        >
          Sort Order
        </label>
        <input
          class="w-full px-3 py-2 border border-gray-300 rounded-md"
          min="0"
          type="number"
          value="0"
        />
      </div>
    </div>
    <div
      class="flex gap-3 pt-4 border-t"
    >
      <button
        class="bg-black text-white px-5 py-2 rounded-md hover:bg-gray-800 disabled:opacity-50 disabled:cursor-not-allowed"
        type="submit"
      >
        Save Changes
      </button>
      <button
        class="bg-red-600 text-white px-5 py-2 rounded-md hover:bg-red-700 disabled:opacity-50 disabled:cursor-not-allowed"
        type="button"
      >
        Unpublish
      </button>
      <button
        class="px-5 py-2 border border-gray-300 rounded-md hover:bg-gray-50"
        type="button"
      >
        Cancel
      </button>
    </div>
  </form>
</div>
`;
